--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
   "require": {
     "php": "^7.0",
     "silex/silex": "^1.3",
-    "symfony/console": "^2.8|^3.0"
+    "symfony/console": "^2.8|^3.0",
+    "league/tactician": "^1.0"
   },
   "require-dev": {
     "ext-pdo_sqlite": "*",
