--- a/blog-laravel-app/composer.json
+++ b/blog-laravel-app/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "skremiec/blog-app": "*",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
@@ -20,6 +21,12 @@
         "phpunit/phpunit": "^10.1",
         "spatie/laravel-ignition": "^2.0"
     },
+    "repositories": [
+        {
+            "type": "path",
+            "url": "../blog-app"
+        }
+    ],
     "autoload": {
         "psr-4": {
             "App\\": "app/",
